@@ -2,6 +2,9 @@
            VERSION 3.2.1
 ------------------------------------
 
+Features & Enhancements:
+* Use JSF converters for path and query parameter conversion.
+
 Bugfixes:
 * Fixed incorrect encoding of URLs when using the 'url' attribute for rewrite rules (#91)
 * MultiPageMessagesSupport doesn't duplicate messages any more if using MyFaces (#89)
